@@ -123,34 +123,56 @@ avr910_devcode   { yylval=NULL; return K_AVR910_DEVCODE; }
 bank_size        { yylval=NULL; return K_PAGE_SIZE; }
 banked           { yylval=NULL; return K_PAGED; }
 baudrate         { yylval=NULL; return K_BAUDRATE; }
+blocksize        { yylval=NULL; return K_BLOCKSIZE; }
 bs2              { yylval=NULL; return K_BS2; }
 buff             { yylval=NULL; return K_BUFF; }
+bytedelay        { yylval=NULL; return K_BYTEDELAY; }
+chip_erase       { yylval=new_token(K_CHIP_ERASE); return K_CHIP_ERASE; }
 chip_erase_delay { yylval=NULL; return K_CHIP_ERASE_DELAY; }
+chiperasepolltimeout { yylval=NULL; return K_CHIPERASEPOLLTIMEOUT; }
+chiperasepulsewidth { yylval=NULL; return K_CHIPERASEPULSEWIDTH; }
+chiperasetime    { yylval=NULL; return K_CHIPERASETIME; }
+cmdexedelay      { yylval=NULL; return K_CMDEXEDELAY; }
 connection_type  { yylval=NULL; return K_CONNTYPE; }
-desc             { yylval=NULL; return K_DESC; }
+dedicated        { yylval=new_token(K_DEDICATED); return K_DEDICATED; }
+default_bitclock { yylval=NULL; return K_DEFAULT_BITCLOCK; }
 default_parallel { yylval=NULL; return K_DEFAULT_PARALLEL; }
 default_programmer { yylval=NULL; return K_DEFAULT_PROGRAMMER; }
 default_serial   { yylval=NULL; return K_DEFAULT_SERIAL; }
-default_bitclock { yylval=NULL; return K_DEFAULT_BITCLOCK; }
+delay            { yylval=NULL; return K_DELAY; }
+desc             { yylval=NULL; return K_DESC; }
 devicecode       { yylval=NULL; return K_DEVICECODE; }
 eecr             { yylval=NULL; return K_EECR; }
 eeprom           { yylval=NULL; return K_EEPROM; }
+eeprom_instr     { yylval=NULL; return K_EEPROM_INSTR; }
 enablepageprogramming { yylval=NULL; return K_ENABLEPAGEPROGRAMMING; }
 errled           { yylval=NULL; return K_ERRLED; }
 flash            { yylval=NULL; return K_FLASH; }
-has_jtag         { yylval=NULL; return K_HAS_JTAG; }
+flash_instr      { yylval=NULL; return K_FLASH_INSTR; }
 has_debugwire    { yylval=NULL; return K_HAS_DW; }
+has_jtag         { yylval=NULL; return K_HAS_JTAG; }
 has_pdi          { yylval=NULL; return K_HAS_PDI; }
 has_tpi          { yylval=NULL; return K_HAS_TPI; }
+hventerstabdelay { yylval=NULL; return K_HVENTERSTABDELAY; }
+hvleavestabdelay { yylval=NULL; return K_HVLEAVESTABDELAY; }
+hvsp_controlstack  { yylval=NULL; return K_HVSP_CONTROLSTACK; }
+hvspcmdexedelay  { yylval=NULL; return K_HVSPCMDEXEDELAY; }
 id               { yylval=NULL; return K_ID; }
 idr              { yylval=NULL; return K_IDR; }
+io               { yylval=new_token(K_IO); return K_IO; }
 is_at90s1200     { yylval=NULL; return K_IS_AT90S1200; }
 is_avr32         { yylval=NULL; return K_IS_AVR32; }
+latchcycles      { yylval=NULL; return K_LATCHCYCLES; }
+load_ext_addr    { yylval=new_token(K_LOAD_EXT_ADDR); return K_LOAD_EXT_ADDR; }
+loadpage_hi      { yylval=new_token(K_LOADPAGE_HI); return K_LOADPAGE_HI; }
+loadpage_lo      { yylval=new_token(K_LOADPAGE_LO); return K_LOADPAGE_LO; }
 max_write_delay  { yylval=NULL; return K_MAX_WRITE_DELAY; }
 memory           { yylval=NULL; return K_MEMORY; }
 min_write_delay  { yylval=NULL; return K_MIN_WRITE_DELAY; }
 miso             { yylval=NULL; return K_MISO; }
+mode             { yylval=NULL; return K_MODE; }
 mosi             { yylval=NULL; return K_MOSI; }
+no               { yylval=new_token(K_NO); return K_NO; }
 num_banks        { yylval=NULL; return K_NUM_PAGES; }
 num_pages        { yylval=NULL; return K_NUM_PAGES; }
 nvm_base         { yylval=NULL; return K_NVM_BASE; }
@@ -161,19 +183,47 @@ pagel            { yylval=NULL; return K_PAGEL; }
 parallel         { yylval=NULL; return K_PARALLEL; }
 parent           { yylval=NULL; return K_PARENT; }
 part             { yylval=NULL; return K_PART; }
+pgm_enable       { yylval=new_token(K_PGM_ENABLE); return K_PGM_ENABLE; }
 pgmled           { yylval=NULL; return K_PGMLED; }
+pollindex        { yylval=NULL; return K_POLLINDEX; }
+pollmethod       { yylval=NULL; return K_POLLMETHOD; }
+pollvalue        { yylval=NULL; return K_POLLVALUE; }
+postdelay        { yylval=NULL; return K_POSTDELAY; }
+poweroffdelay    { yylval=NULL; return K_POWEROFFDELAY; }
+pp_controlstack  { yylval=NULL; return K_PP_CONTROLSTACK; }
+predelay         { yylval=NULL; return K_PREDELAY; }
+progmodedelay    { yylval=NULL; return K_PROGMODEDELAY; }
+programfusepolltimeout { yylval=NULL; return K_PROGRAMFUSEPOLLTIMEOUT; }
+programfusepulsewidth { yylval=NULL; return K_PROGRAMFUSEPULSEWIDTH; }
+programlockpolltimeout { yylval=NULL; return K_PROGRAMLOCKPOLLTIMEOUT; }
+programlockpulsewidth { yylval=NULL; return K_PROGRAMLOCKPULSEWIDTH; }
 programmer       { yylval=NULL; return K_PROGRAMMER; }
+pseudo           { yylval=new_token(K_PSEUDO); return K_PSEUDO; }
 pwroff_after_write { yylval=NULL; return K_PWROFF_AFTER_WRITE; }
 rampz            { yylval=NULL; return K_RAMPZ; }
 rdyled           { yylval=NULL; return K_RDYLED; }
+read             { yylval=new_token(K_READ); return K_READ; }
+read_hi          { yylval=new_token(K_READ_HI); return K_READ_HI; }
+read_lo          { yylval=new_token(K_READ_LO); return K_READ_LO; }
 readback_p1      { yylval=NULL; return K_READBACK_P1; }
 readback_p2      { yylval=NULL; return K_READBACK_P2; }
+readsize        { yylval=NULL; return K_READSIZE; }
+reset            { yylval=new_token(K_RESET); return K_RESET; }
+resetdelay       { yylval=NULL; return K_RESETDELAY; }
+resetdelayms     { yylval=NULL; return K_RESETDELAYMS; }
+resetdelayus     { yylval=NULL; return K_RESETDELAYUS; }
 retry_pulse      { yylval=NULL; return K_RETRY_PULSE; }
+sck              { yylval=new_token(K_SCK); return K_SCK; }
 serial           { yylval=NULL; return K_SERIAL; }
 signature        { yylval=NULL; return K_SIGNATURE; }
 size             { yylval=NULL; return K_SIZE; }
 spmcr            { yylval=NULL; return K_SPMCR; }
+stabdelay        { yylval=NULL; return K_STABDELAY; }
 stk500_devcode   { yylval=NULL; return K_STK500_DEVCODE; }
+synchcycles      { yylval=NULL; return K_SYNCHCYCLES; }
+synchloops       { yylval=NULL; return K_SYNCHLOOPS; }
+timeout          { yylval=NULL; return K_TIMEOUT; }
+togglevtg        { yylval=NULL; return K_TOGGLEVTG; }
 type             { yylval=NULL; return K_TYPE; }
 usb              { yylval=NULL; return K_USB; }
 usbdev           { yylval=NULL; return K_USBDEV; }
@@ -184,65 +234,10 @@ usbvendor        { yylval=NULL; return K_USBVENDOR; }
 usbvid           { yylval=NULL; return K_USBVID; }
 vcc              { yylval=NULL; return K_VCC; }
 vfyled           { yylval=NULL; return K_VFYLED; }
-
-timeout          { yylval=NULL; return K_TIMEOUT; }
-stabdelay        { yylval=NULL; return K_STABDELAY; }
-cmdexedelay      { yylval=NULL; return K_CMDEXEDELAY; }
-hvspcmdexedelay  { yylval=NULL; return K_HVSPCMDEXEDELAY; }
-synchloops       { yylval=NULL; return K_SYNCHLOOPS; }
-bytedelay        { yylval=NULL; return K_BYTEDELAY; }
-pollvalue        { yylval=NULL; return K_POLLVALUE; }
-pollindex        { yylval=NULL; return K_POLLINDEX; }
-predelay         { yylval=NULL; return K_PREDELAY; }
-postdelay        { yylval=NULL; return K_POSTDELAY; }
-pollmethod       { yylval=NULL; return K_POLLMETHOD; }
-mode             { yylval=NULL; return K_MODE; }
-delay            { yylval=NULL; return K_DELAY; }
-blocksize        { yylval=NULL; return K_BLOCKSIZE; }
-readsize        { yylval=NULL; return K_READSIZE; }
-pp_controlstack  { yylval=NULL; return K_PP_CONTROLSTACK; }
-hvsp_controlstack  { yylval=NULL; return K_HVSP_CONTROLSTACK; }
-hventerstabdelay { yylval=NULL; return K_HVENTERSTABDELAY; }
-progmodedelay    { yylval=NULL; return K_PROGMODEDELAY; }
-latchcycles      { yylval=NULL; return K_LATCHCYCLES; }
-togglevtg        { yylval=NULL; return K_TOGGLEVTG; }
-poweroffdelay    { yylval=NULL; return K_POWEROFFDELAY; }
-resetdelayms     { yylval=NULL; return K_RESETDELAYMS; }
-resetdelayus     { yylval=NULL; return K_RESETDELAYUS; }
-hvleavestabdelay { yylval=NULL; return K_HVLEAVESTABDELAY; }
-resetdelay       { yylval=NULL; return K_RESETDELAY; }
-synchcycles      { yylval=NULL; return K_SYNCHCYCLES; }
-chiperasepulsewidth { yylval=NULL; return K_CHIPERASEPULSEWIDTH; }
-chiperasepolltimeout { yylval=NULL; return K_CHIPERASEPOLLTIMEOUT; }
-chiperasetime    { yylval=NULL; return K_CHIPERASETIME; }
-programfusepulsewidth { yylval=NULL; return K_PROGRAMFUSEPULSEWIDTH; }
-programfusepolltimeout { yylval=NULL; return K_PROGRAMFUSEPOLLTIMEOUT; }
-programlockpulsewidth { yylval=NULL; return K_PROGRAMLOCKPULSEWIDTH; }
-programlockpolltimeout { yylval=NULL; return K_PROGRAMLOCKPOLLTIMEOUT; }
-flash_instr      { yylval=NULL; return K_FLASH_INSTR; }
-eeprom_instr     { yylval=NULL; return K_EEPROM_INSTR; }
-
-dedicated        { yylval=new_token(K_DEDICATED); return K_DEDICATED; }
-io               { yylval=new_token(K_IO); return K_IO; }
-pseudo           { yylval=new_token(K_PSEUDO); return K_PSEUDO; }
-
-reset            { yylval=new_token(K_RESET); return K_RESET; }
-sck              { yylval=new_token(K_SCK); return K_SCK; }
-
-read             { yylval=new_token(K_READ); return K_READ; }
 write            { yylval=new_token(K_WRITE); return K_WRITE; }
-read_lo          { yylval=new_token(K_READ_LO); return K_READ_LO; }
-read_hi          { yylval=new_token(K_READ_HI); return K_READ_HI; }
-write_lo         { yylval=new_token(K_WRITE_LO); return K_WRITE_LO; }
 write_hi         { yylval=new_token(K_WRITE_HI); return K_WRITE_HI; }
-loadpage_lo      { yylval=new_token(K_LOADPAGE_LO); return K_LOADPAGE_LO; }
-loadpage_hi      { yylval=new_token(K_LOADPAGE_HI); return K_LOADPAGE_HI; }
-load_ext_addr    { yylval=new_token(K_LOAD_EXT_ADDR); return K_LOAD_EXT_ADDR; }
+write_lo         { yylval=new_token(K_WRITE_LO); return K_WRITE_LO; }
 writepage        { yylval=new_token(K_WRITEPAGE); return K_WRITEPAGE; }
-chip_erase       { yylval=new_token(K_CHIP_ERASE); return K_CHIP_ERASE; }
-pgm_enable       { yylval=new_token(K_PGM_ENABLE); return K_PGM_ENABLE; }
-
-no               { yylval=new_token(K_NO); return K_NO; }
 yes              { yylval=new_token(K_YES); return K_YES; }
 
 ","       { yylval = NULL; pyytext(); return TKN_COMMA; }
